# Mcloud-Browser

./: .gitmodules  CODE_OF_CONDUCT.md  LICENSE.md  README.md  SECURITY.md  TODO.md  aliases.txt  args.gn  build.sh  build_android.sh  build_mac.sh  build_win.sh  check_simd.sh  clean.sh  create_dmg.sh  g  get_repo.sh  mcloud_flags.txt  reset_depot_tools.sh  setup.sh  trunk.sh  upstream_version.sh  version.sh  win_args.gn  win_args_mcloud.gn
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build.yml  release.yml
arm/: README.md  mac_arm.gni  setup_arm.sh  win_ARM_args.gn
arm/android/: arm32_args.gn  arm64_args.gn  chromium_args.gn  debug_args.gn  x64_args.gn  x86_args.gn
arm/raspi/: raspi_args.gn
docs/: ABOUT_GN_ARGS.md  ABOUT_RELEASES.md  BUILDING.md  BUILDING_MAC.md  BUILDING_WIN.md  BUILDING_WIN_CROSS.md  CHANGELOG.md  FAQ.md  FEATURES.md  PATCHES.md  README.md  REBASING.md  TH24.md
docs/superpowers/plans/: 2026-06-08-mcloud-browser-m149-upgrade.md
docs/superpowers/specs/: 2026-06-08-mcloud-browser-m149-upgrade-design.md  2026-06-09-video-optimization-design.md
infra/: BUGS.md  BUILDING_OLD.md  README.md  THORIUM_DEV_BOOKMARKS.html  THOR_PREREQUISITES_22.04.md  build_dmg_cr.sh  build_ffmpeg.sh  mcloud_strings.grd  thorium_strings.grd
infra/APPIMAGE/: Thorium.yml  make_appimage.sh
infra/APPIMAGE/files/: thorium-shell
infra/Arch_Linux/: thorium-browser.install  thorium-browser.sh
infra/DEBUG/: ABOUT_GN_ARGS.md  DEBUGGING.md  DEBUG_SHELL_README.md  README.md  Thorium_Debug_Shell.sh  build_debug_linux.sh  build_debug_shell_linux.sh  build_debug_shell_win.sh  build_debug_win.sh  debug_args.gn  mac_ARM_debug_args.gn  mac_x64_debug_args.gn  test_build_args.gn  test_build_win_args.gn  win_SYMBOLS_BUILD.gn  win_debug_args.gn
infra/portable/: THORIUM_SHELL.BAT  make_portable_win.py  make_portable_win.sh  mcloud-shell.desktop  thorium-portable.desktop
mcloud-libjxl/src/: README.md
other/: GPC.patch  allow_manifest_v2_extensions.patch  disable-privacy-sandbox.patch  fix-ffmpeg-android-x86-disable-hevc-nasm.patch  fix-policy-templates.patch  fix_dangling_pointer_tooltip.patch  fix_deb_dependency_generation.patch  fix_disable_aero_crash.patch  ftp-support-mcloud-fixed.patch  ftp-support-thorium.patch  keyboard_shortcuts.patch  mcloud-2024-ui.patch  mini_installer.patch  open_in_same_tab.patch  restore_download_shelf.patch  thorium-2024-ui.patch  thorium_webui.patch  win_updater.patch
other/AVX2/: AVX2_args.gn  win_AVX2_args.gn
other/AVX512/: AVX512_args.gn  win_AVX512_args.gn
other/CrOS/: cros_args.gn
other/CrOS/chrome/browser/: memory_details_linux.cc
other/Mac/: mac_ARM_args.gn  mac_args.gn
other/SSE2/: args_SSE2.gn  win32_SSE2_args.gn
other/SSE3/: args_SSE3.gn  win32_SSE3_args.gn  win64_SSE3_args.gn
other/SSE4.1/: args_SSE4.1.gn  win32_SSE4.1_args.gn  win64_SSE4.1_args.gn
other/SSE4.2/: args_SSE4.2.gn  win32_SSE4.2_args.gn  win64_SSE4.2_args.gn
other/thor_ver_linux/: wrapper-avx2  wrapper-avx512  wrapper-raspi  wrapper-sse2  wrapper-sse3  wrapper-sse4
src/: BUILD.gn
src/chrome/: BUILD.gn
src/chrome/android/: BUILD.gn  chrome_java_resources.gni  chrome_public_apk_tmpl.gni
src/chrome/app/: app_management_strings.grdp  chrome_main_delegate.cc  chromium_strings.grd  generated_resources.grd  settings_chromium_strings.grdp  settings_strings.grdp  shared_settings_strings.grdp
src/chrome/app/theme/: theme_resources.grd
src/chrome/app/vector_icons/: BUILD.gn
src/chrome/browser/: BUILD.gn  about_flags.cc  chrome_content_browser_client.cc  mcloud_flag_entries.h  memory_details_linux.cc  shell_integration_linux.cc
src/chrome/browser/download/: chrome_download_manager_delegate.cc  download_target_determiner.cc  download_ui_controller.cc  insecure_download_blocking.cc
src/chrome/browser/net/: default_dns_over_https_config_source.cc  profile_network_context_service.cc  stub_resolver_config_reader.cc
src/chrome/browser/profiles/: profile_shortcut_manager_win.cc
src/chrome/browser/ui/: browser.cc  browser.h  browser_commands.cc  browser_ui_prefs.cc  ui_features.cc
src/chrome/chrome_proxy/: chrome_proxy_main_win.cc
src/chrome/common/: channel_info_posix.cc  chrome_constants.cc  chrome_constants.h  chrome_paths_linux.cc  chrome_paths_mac.mm  mcloud_2024.h
src/chrome/install_static/: chromium_install_modes.h
src/chrome/installer/linux/: BUILD.gn
src/chromeos/: chromeos_strings.grd
src/components/: BUILD.gn  autofill_payments_strings.grdp  autofill_strings.grdp  components_chromium_strings.grd  components_settings_strings.grdp  error_page_strings.grdp  flags_strings.grdp  heavy_ad_intervention_strings.grdp  management_strings.grdp  new_or_sad_tab_strings.grdp  page_info_strings.grdp  reset_password_strings.grdp  security_interstitials_strings.grdp  ssl_errors_strings.grdp  version_ui_strings.grdp
src/components/metrics/: machine_id_provider_nonwin.cc  machine_id_provider_win.cc
src/components/vector_icons/: BUILD.gn
src/content/browser/: BUILD.gn
src/content/common/: gpu_pre_sandbox_hook_linux.cc  url_schemes.cc
src/content/gpu/: BUILD.gn
src/content/shell/: BUILD.gn
src/content/test/: BUILD.gn
src/extensions/browser/: extension_prefs.cc  ui_util.cc
src/extensions/common/: extension.cc
src/media/: media_options.gni
src/media/base/: media_switches.cc  supported_types.cc
src/media/ffmpeg/: ffmpeg_common.cc
src/media/filters/: ffmpeg_glue.cc  ffmpeg_video_decoder.cc
src/net/base/: load_flags_list.h
src/net/dns/: dns_client.cc  dns_transaction.cc
src/net/url_request/: url_request_http_job.cc
src/sandbox/linux/: BUILD.gn
src/tools/v8_context_snapshot/: BUILD.gn
src/ui/chromeos/: ui_chromeos_strings.grd
src/ui/gtk/: native_theme_gtk.cc  native_theme_gtk.h
src/v8/: BUILD.gn
thorium_shell/: thorium-shell.desktop
win_scripts/: README.md  build_win.py  clean.py  copy_essentials.py  setup.py  tot.py  trunk.py  upstream_version.py  version.py
win_scripts/old/: build.bat  clean.bat  make_zip.bat  setup.bat  trunk.bat
(+56 files in other folders)
