# =============================================================================
# MCloud Browser — Optimized for Intel Core i9-14900HX (Raptor Lake)
# =============================================================================
# Target: AVX2 + FMA3 native compilation
# Minimum CPU: Intel Haswell (2013) / AMD Ryzen (2017) with AVX2 + FMA3
# Platform: Windows x64
# =============================================================================

# --- SIMD Instruction Sets ---
# NOTE: Standard Chromium M149 does not have GN flags for SIMD instruction sets.
# The compiler will use AVX2/FMA3 based on the target CPU and compiler flags.
# These were Thorium-specific flags that have no effect in vanilla Chromium.
# use_sse3, use_sse41, use_sse42, use_avx, use_avx2, use_fma, use_avx512
# To enable AVX2, use: extra_cflags = ["-mavx2", "-mfma"] (if needed)

# --- Build Target ---
target_os = "win"
target_cpu = "x64"

# --- Build Type ---
is_official_build = true
is_debug = false
dcheck_always_on = false
symbol_level = 0
v8_symbol_level = 0
blink_symbol_level = 0
exclude_unwind_tables = true
enable_stripping = true

# --- Compiler Optimizations ---
is_clang = true
use_lld = true
use_icf = false                         # ICF not supported by lld-link on Windows
use_thin_lto = true
thin_lto_enable_optimizations = true
thin_lto_enable_cache = false
use_text_section_splitting = true        # Better ICF with text section splitting
enable_precompiled_headers = false
treat_warnings_as_errors = false
init_stack_vars_zero = true              # Security: zero-init stack variables

# --- PGO (Profile Guided Optimization) ---
chrome_pgo_phase = 2
pgo_data_path = "C:/Users/XOS/chromium/src/chrome/build/pgo_profiles/chrome-win64-7827-1779988919-2c0a8dc88e7640a6daf7729772ffde561e21eda4-86ce7ec3ee0415adb4148ea865149fb1aefc5f81.profdata"

# --- V8 JavaScript Engine Optimizations ---
v8_enable_fast_torque = true
v8_enable_builtins_optimization = true
v8_enable_maglev = true                  # Maglev JIT compiler (mid-tier, fast compile)
v8_enable_turbofan = true                # TurboFan JIT compiler (optimizing)
v8_enable_wasm_simd256_revec = true      # WebAssembly SIMD256 vectorization
use_v8_context_snapshot = true

# --- Rendering & UI ---
optimize_webui = true

# --- Windows Specific ---
win_enable_cfg_guards = true             # Control Flow Guard
enable_rlz = true                        # RLZ tracking (for search engine attribution)

# --- Media / FFmpeg ---
media_use_ffmpeg = true
media_use_libvpx = true
enable_hls_demuxer = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_ffmpeg_video_decoders = true
is_component_ffmpeg = false              # Static link ffmpeg for better LTO
# NOTE: use_webaudio_pffft is not a valid GN arg in M149 (removed)

# --- Widevine DRM ---
enable_library_cdms = true
enable_widevine = true
bundle_widevine_cdm = true
enable_cdm_storage_id = true
ignore_missing_widevine_signing_cert = true
enable_media_drm_storage = true
enable_hangout_services_extension = false

# --- WebRTC ---
rtc_use_h264 = true
rtc_use_h265 = true
rtc_build_examples = false
rtc_enable_avx2 = true                   # WebRTC AVX2 SIMD acceleration

# --- Video Codec Support ---
enable_platform_hevc = true
enable_hevc_parser_and_hw_decoder = true
platform_has_optional_hevc_decode_support = true
platform_has_optional_hevc_encode_support = true
enable_platform_ac3_eac3_audio = true
enable_platform_ac4_audio = false
enable_platform_dolby_vision = true
enable_platform_encrypted_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_platform_dts_audio = true
enable_mse_mpeg2ts_stream_parser = true

# --- VR ---
enable_vr = true

# --- Rust ---
enable_rust = true

# --- Resource / Reporting ---
disable_fieldtrial_testing_config = true
enable_reporting = false
enable_resource_allowlist_generation = false
enable_profiling = false
is_component_build = false
